Implementación de soporte para descargas y subidas con notificaciones de progreso en `UtilidadesS3`, integración con `MainUI` para manejo visual del progreso, y refactorización de métodos relacionados para manejo en segundo plano.